# falc_crew

./: .env_example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: fr-FR.json
falc_crew/: README.md  pyproject.toml
falc_crew/knowledge/: CHANGELOG.md  user_preference.txt
falc_crew/src/falc_crew/: crew.py
knowledge/: falc_guidelines.md  icons.json
src/: chainlit_app.py
src/falc_crew/: crew.py  main.py
src/falc_crew/config/: agents.yaml  tasks.yaml
src/falc_crew/tools/: __init__.py  custom_tool.py
temp_uploads/: ASOC_Modalités de prise en charge de lunettes_avant.docx  ASS_Décision suppression totale ou partielle_AU.docx  AVANT_ASS_Décision_supp_prestations_Réquisition.docx  AVANT_DEM_Arrivée sur canton de Vaud assisté + autonome.docx  AVANT_DON_Décision_Fin prise en charge.docx
temp_uploads/dafd3ab0-5fbe-460c-a50b-48121ed5be28/: Visite à domicile.docx
