[project]
name = "falc_crew"
version = "0.0.1"
description = "falc_crew using crewAI"
authors = [{ name = "Julien de Lambilly", email = "" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "python-docx>=1.1.2",
    "docx2txt>=0.9"
]

[project.scripts]
falc_crew = "falc_crew.main:run"
run_crew = "falc_crew.main:run"
train = "falc_crew.main:train"
replay = "falc_crew.main:replay"
test = "falc_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
